<resources>
    <string name="app_name">Canap\'Pêche</string>
    <string name="btnAccueilJeu">Jouer</string>
    <string name="btnAccueilHS">Highscores</string>
    <string name="ici_on_aura_le_jeu">ici on aura le jeu</string>
    <string name="start_the_game">Start the game !</string>
    <string name="nom_du_pecheur">Nom du pêcheur :</string>
    <string name="strTuto">Bienvenue dans canap\'pêche ! Le but de ce jeu est de cliquer sur un maximum de poissons dans le temps imparti. Mais attention, évitez de cliquer sur les poisson-bombes…</string>

    <string name="jouer">Jouer</string>
    <string name="highscore">Highscore</string>
    <string name="rules">But du jeu</string>
    <string name="title">Canap\'Pêche</string>
    <string name="name">Pseudo</string>
    <string name="gold_fish">Gold Fish</string>
    <string name="gold_fish_rule">Pêcher un poisson doré ajoute 10 points à votre score</string>
    <string name="bomb_fish">Bomb Fish</string>
    <string name="bomb_fish_rule">AÏe ! Ne touchez pas à ces poissons, ils vous enlèveront 10 points</string>>
    <string name="fish">Fish</string>
    <string name="fish_rule">Ce sont les poissons les plus fréquents</string>
    <string name="highscores">Voici la liste des scores de différents joueurs de Canap\'Pêche</string>
    <string name="pause">PAUSE</string>
    <string name="player_name">player_name</string>
    <string name="time_remaining">time_remaining</string>
    <string name="btn_continue">Continue</string>
    <string name="player_score">player_score</string>
</resources>